# Wallkyrie

./: .buildconfig  .gitignore  README.md  meson.build
src/: WallImage.vala  Wallkyrie.vala  Wallpaper.vala  Window.vala
styles/: stylesheet.css
